# OttoUpdater

./: README.md  pyproject.toml
src/endstone_ottoupdater/: __init__.py  ottoupdater.py
